Wed Jan 12 16:24:53 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* ext/readline/extconf.rb: new checks for RL_PROMPT_START_IGNORE 
	  and RL_PROMPT_END_IGNORE. [ruby-core:34331]

	* ext/readline/readline.c: enables USE_INSERT_IGNORE_ESCAPE only if
	  RL_PROMPT_{START,END}_IGNORE are available to get rid of compilation
	  error with libedit.

Sun Jan  9 14:47:50 2011  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/readline.c: apply a patch from Nobuyoshi Nakada.
	  fixed #3616 [ruby-core:31484] IRB + readline incorrectly counts
	  non-printing characters in prompt

Fri Jan  7 21:54:04 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-font-lock-syntactic-keywords): highlight
	  regexp after open bracket.  [ruby-core:34183]

Thu Jan  6 22:42:02 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bigmul1_karatsuba): avoid overflow that make assertion
	  fail in certain case.  this patch is contributed from Ray Chason
	  <chasonr at gmail.com> in personal communication.

Thu Jan  6 11:27:01 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/json/tree_builder.rb (start_mapping): tags
	  should not be included in JSON mapping

Thu Jan  6 05:14:41 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (get_strio, strio_set_string)
	  (strio_reopen): check if frozen.  [ruby-core:33648]

Wed Jan  5 13:56:54 2011  Akinori MUSHA  <knu@iDaemons.org>

	* lib/net/http.rb (Net::HTTP#get): A header hash given should not
	  be modified.

Sun Jan  9 16:31:34 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/irb/locale.rb (IRB::Locale::LOCALE_NAME_RE): 
	  some platoform has a locale without territory but with 
	  encoding.
	  (#each_sub_locale): ditto.

Sat Jan  1 17:02:50 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/irb/locale.rb (IRB::Locale#search_file): make it possible
	  to load a localization from a gem.
	  (IRB::Locale#lc_path): obsoleted because of the change of #search_file